# soft-pkcs11

./: .soft-token.rc  CMakeLists.txt  ChangeLog  README.md  aclocal.m4  attribute.cpp  attribute.h  config.h.in  configure  configure.ac  exceptions.h  function_wrap.h  locl.h  log.cpp  log.h  main.c  main.cpp  object.cpp  object.h  soft_token.cpp  soft_token.h  storage.cpp  storage.h  tools.cpp  tools.h  types.h
data/: test.crt  test.key
example/: .cvsignore  Makefile.am  Makefile.in  README  main.c  release.sh  run_tests.in  soft-token.rc  test_soft_pkcs11.c
example/data/: ca.crt  ca.key
example/java/: pkcs11.cfg
java/: README
keys/: private.key.pub  ssh-private.key  ssl-private.key
pkcs11/: pkcs11t.h
scripts/: sshpass
spec/: fs_spec.rb
